--- a/androidApp/app/src/main/res/layout/activity_splash.xml
+++ b/androidApp/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".SplashActivity"
+    tools:context=".activity.SplashActivity"
     android:background="@drawable/background">
 
     <ImageView
