--- a/androidApp/app/src/main/res/layout/cart_view_holder.xml
+++ b/androidApp/app/src/main/res/layout/cart_view_holder.xml
@@ -7,27 +7,33 @@
     android:layout_marginBottom="10dp"
     android:elevation="3dp">
 
-    <ImageView
-        android:id="@+id/cartViewHolderImage"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="3dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cartViewHolderImageCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp"
+        android:elevation="10dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/holder"
-        />
+        app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/cartViewHolderImage"
+        android:layout_width="120dp"
+        android:layout_height="150dp"
+        app:srcCompat="@mipmap/holder" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/cartViewHolderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/cartViewHolderImage"
-        app:layout_constraintStart_toEndOf="@id/cartViewHolderImage"
+        app:layout_constraintTop_toTopOf="@+id/cartViewHolderImageCard"
+        app:layout_constraintStart_toEndOf="@id/cartViewHolderImageCard"
         android:layout_marginTop="15dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="20dp"
         android:textColor="@color/black"
         android:textSize="14sp"
         android:text="Item Name"
@@ -42,10 +48,24 @@
         android:textColor="@color/grey"
         android:textSize="13sp"
         android:text="69.000 VND"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/cartViewHolderName"
-        app:layout_constraintStart_toEndOf="@id/cartViewHolderImage"/>
+        app:layout_constraintStart_toEndOf="@id/cartViewHolderImageCard"/>
+
+    <!--    TODO config this later -->
+    <TextView
+        android:id="@+id/itemSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand"
+        android:textColor="@color/grey"
+        android:textSize="13sp"
+        android:text="Size XL"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/itemsCost"
+        app:layout_constraintStart_toEndOf="@id/cartViewHolderImageCard"/>
 
     <ImageView
         android:id="@+id/cartItemDecrease"
@@ -53,17 +73,17 @@
         android:layout_height="20dp"
         app:srcCompat="@drawable/minus"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/cartViewHolderImage"
+        app:layout_constraintBottom_toBottomOf="@id/cartViewHolderImageCard"
         app:layout_constraintStart_toStartOf="@id/cartViewHolderName"
         app:tint="@color/grey" />
 
     <TextView
         android:id="@+id/cartNumItemsTextView"
-        android:layout_width="25dp"
+        android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:text="1"
         android:textSize="11sp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="8dp"
         android:textColor="@color/grey"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@id/cartItemDecrease"
@@ -75,7 +95,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         app:srcCompat="@drawable/plus"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@id/cartItemDecrease"
         app:layout_constraintStart_toEndOf="@id/cartNumItemsTextView"
         app:tint="@color/grey"/>
@@ -86,7 +106,7 @@
         android:layout_height="15dp"
         app:srcCompat="@drawable/cancel"
         app:tint="@color/light_grey"
-        android:layout_marginStart="125dp"
+        android:layout_marginStart="100dp"
         android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="@id/cartItemDecrease"
         app:layout_constraintStart_toEndOf="@id/cartItemIncrease"
