--- a/androidApp/app/src/main/res/values/colors.xml
+++ b/androidApp/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="grey">#333333</color>
     <color name="light_grey">#999</color>
     <color name="light_line">#999</color>
+    <color name="text">#333</color>
+    <color name="text_light">#888</color>
+
 </resources>
