--- a/androidApp/app/src/main/res/drawable/trending_item_overlay.xml
+++ b/androidApp/app/src/main/res/drawable/trending_item_overlay.xml
@@ -5,8 +5,7 @@
     <!--        android:width="1dp"-->
     <!--        android:color="@color/text_light" />-->
     <gradient
-        android:startColor="#BF000000"
+        android:startColor="#000000"
         android:endColor="#00000000"
-        android:angle="270" />
-    <!--    <solid android:color="#40000000" />-->
+        android:angle="90" />
 </shape>
