--- a/androidApp/app/src/main/res/layout/category_tag_item.xml
+++ b/androidApp/app/src/main/res/layout/category_tag_item.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+    app:strokeColor="@color/primary_light"
     android:id="@+id/categoryTagWrapper"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
+    android:layout_marginTop="0dp"
     android:layout_marginEnd="4dp"
-    android:background="@drawable/shape_category_tag"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingLeft="12dp"
-    android:paddingTop="4dp"
-    android:paddingRight="12dp"
-    android:paddingBottom="8dp">
-
-    <TextView
-        android:id="@+id/categoryTagName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="Áo khoác nữ"
-        android:textColor="@color/text_light" />
-
-</LinearLayout>
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
+    android:text="Áo khoác nữ"
+    android:textAllCaps="false"
+    android:textSize="12sp"
+    android:textColor="@color/primary_light"
+    app:cornerRadius="20dp" />
