--- a/androidApp/app/src/main/res/layout/trending_item.xml
+++ b/androidApp/app/src/main/res/layout/trending_item.xml
@@ -20,7 +20,7 @@
 
             <ImageView
                 android:id="@+id/trendingItemImage"
-                android:layout_width="wrap_content"
+                android:layout_width="140dp"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
