--- a/androidApp/app/src/main/res/layout/map_marker_info_content.xml
+++ b/androidApp/app/src/main/res/layout/map_marker_info_content.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="32dp"
         android:src="@drawable/logo"
-        android:layout_margin="8dp"
-        />
+        android:layout_margin="8dp">
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@mipmap/ic_logo"
+            />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
