--- a/androidApp/app/src/main/res/layout/activity_splash.xml
+++ b/androidApp/app/src/main/res/layout/activity_splash.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logoSplashView">
 
         <ProgressBar
+            android:indeterminateTint="@color/dark_gray"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:indeterminate="true" />
