--- a/androidApp/app/src/main/res/layout/fragment_home.xml
+++ b/androidApp/app/src/main/res/layout/fragment_home.xml
@@ -95,6 +95,17 @@ android:gravity="center">-->
                             android:layout_height="match_parent"
                             android:adjustViewBounds="true"
                             android:background="@null"
+                            android:paddingRight="12dp"
+                            android:paddingTop="3dp"
+                            android:paddingBottom="3dp"
+                            android:src="@drawable/ic_micro"
+                            app:tint="@color/primary_dark" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="true"
+                            android:background="@null"
                             android:paddingRight="8dp"
                             android:src="@drawable/ic_camera"
                             app:tint="@color/primary_dark" />
