--- a/androidApp/app/src/main/res/layout/activity_auth.xml
+++ b/androidApp/app/src/main/res/layout/activity_auth.xml
@@ -12,13 +12,22 @@
 
 
     <Button
-        android:id="@+id/authLoginBtn"
+        android:id="@+id/fbAuthLoginBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:width="300dp"
         android:text="Login with FB" />
 
+    <Button
+        android:id="@+id/gAuthLoginBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:width="300dp"
+        android:text="Login with Google" />
+
+
     <TextView
-        android:text="name"
+        android:text="userId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/authUserId" />
