--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,29 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activity.MainActivity"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:id="@+id/productWrapper"
 
-    <ImageView
-        android:id="@+id/itemImg"
-        android:layout_width="185dp"
-        android:layout_height="180dp"
-        android:backgroundTint="@color/blank"
+    >
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="20dp"
 
-         />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/itemName"
-        android:text="Item"
-        android:textAppearance="?attr/textAppearanceHeadline6"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/itemPrice"
-        android:text="3.0 USD"
-        android:textAppearance="?attr/textAppearanceHeadline5"/>
+        app:cardBackgroundColor="@color/black"
+        app:cardMaxElevation="12dp"
+        android:layout_marginStart="15dp"
+        app:cardPreventCornerOverlap="true"
+    >
+    <!--        app:cardPreventCornerOverlap="true"-->
+
+        <ImageView
+            android:id="@+id/itemImg"
+            android:layout_width="185dp"
+            android:layout_height="180dp"
+            android:background="@android:color/transparent"
+            />
+
+    </androidx.cardview.widget.CardView>
+
+
+            <TextView
+                android:id="@+id/itemName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Item"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textColor="#3E3E3E"
+                android:paddingLeft="15dp"
+                android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:id="@+id/itemPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3.0 USD"
+                android:textAppearance="?attr/textAppearanceHeadline5"
+                android:textColor="#11655D"
+                android:drawableEnd="@drawable/ic_dollar"
+                android:paddingLeft="15dp"
+                android:layout_marginTop="2dp"/>
+
 
 </LinearLayout>
