--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -66,8 +66,11 @@
     <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/productsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_gravity="fill_horizontal"
+        android:layout_height="wrap_content"
+        android:background="@color/blank" />
 
 
 </FrameLayout>
