--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -17,19 +17,19 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:layout_marginTop="40dp"
         android:layout_marginHorizontal="15dp"
     >
-        <ImageView
+        <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="310dp"
             android:layout_marginStart="55dp"
-            android:id="@+id/productImage"/>
+            android:id="@+id/productImagePager"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:minWidth="50dp"
             android:minHeight="50dp"
             android:layout_gravity="start|top"
@@ -42,17 +42,21 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:scrollbars="none"
             >
 
-            <LinearLayout
+            <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/sizeLayout"
+                android:id="@+id/sizeGroup"
                 android:orientation="vertical"
+
+                app:singleSelection="true"
                 >
 
-            </LinearLayout>
+            </RadioGroup>
         </ScrollView>
         </LinearLayout>
     
