--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="wine_2">#771731</color>
     <color name="grey">#A6A6A6</color>
+    <color name="low_grey">#EFEFEF</color>
     <color name="theme_button">#0386D0</color>
     <color name="theme_text">#ECCD5F</color>
     <color name="red">#FF0000</color>
