--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -92,6 +92,7 @@
 
         android:id="@+id/productsRecyclerView"
         android:layout_width="match_parent"
+        android:layout_marginRight="35px"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"/>
 
