--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -12,15 +12,14 @@
         android:layout_height="wrap_content"
         layout="@layout/nav_bar"
         android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="15dp"
-        />
+        android:layout_marginHorizontal="15dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="320dp"
         android:layout_marginTop="40dp"
-        android:layout_marginHorizontal="15dp"
-    >
+        android:layout_marginHorizontal="15dp">
+
         <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="310dp"
@@ -34,35 +33,48 @@
             android:minHeight="50dp"
             android:layout_gravity="start|top"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:text="Size"/>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:scrollbars="none"
-            >
-
-            <RadioGroup
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/sizeGroup"
-                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:scrollbars="none">
 
-                app:singleSelection="true"
-                >
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/sizeGroup"
+                    android:orientation="vertical"
+                    app:singleSelection="true">
 
-            </RadioGroup>
-        </ScrollView>
+                </RadioGroup>
+            </ScrollView>
         </LinearLayout>
-    
-        
     </FrameLayout>
 
-
+    <!-- Product Description -->
+    <TextView
+        android:id="@+id/productName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    <TextView
+        android:id="@+id/productDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:text="Product Description"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
