--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -66,7 +66,55 @@
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="15dp"
         android:textSize="18sp"
+        android:textAlignment="center"
         android:textStyle="bold" />
+    <TextView
+        android:id="@+id/productPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="15dp"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/decrementButton"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="-" />
+
+        <TextView
+            android:id="@+id/quantityTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingHorizontal="8dp" />
+
+        <Button
+            android:id="@+id/incrementButton"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30px"
+            android:text="+" />
+        <Button
+            android:id="@+id/btnAddToCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add to Cart"
+            android:textSize="14sp"
+            android:layout_gravity="center" />
+
+    </LinearLayout>
     <TextView
         android:id="@+id/productDescription"
         android:layout_width="match_parent"
@@ -76,5 +124,7 @@
         android:text="Product Description"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+
 
 </LinearLayout>
