--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,11 +52,17 @@
             android:fontFamily="sans-serif-medium"
             android:layout_marginBottom="8dp" />
 
-        <!-- RecyclerView for displaying trending items -->
+<!--        <androidx.viewpager.widget.ViewPager-->
+<!--            android:id="@+id/sliderViewPager"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_marginTop="16dp" />-->
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/productsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/recyclerView" />
+            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
