--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -8,6 +8,7 @@
         tools:context=".activity.ProductDetailActivity"
         android:orientation="vertical"
         android:background="@drawable/bg_product_detail"
+        android:gravity="fill_vertical"
         >
 
         <include
@@ -63,26 +64,44 @@
             </LinearLayout>
         </FrameLayout>
 
+<!--        Image dot indicator-->
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="13dp"
+            android:orientation="horizontal"
+            android:id="@+id/pagerIndicator"
+            android:layout_gravity="center_horizontal"/>
         <!-- Product Description -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="15dp"
+        android:orientation="vertical"
+        >
         <TextView
             android:id="@+id/productName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="15dp"
+            android:text="Product name"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textStyle="bold"
+
             />
         <TextView
             android:id="@+id/productPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:layout_below="@id/productName"
             android:layout_marginHorizontal="15dp"
-            android:text=""
+            android:text="80$"
             android:textAlignment="textStart"
-            android:textSize="18sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/productDescription"
@@ -90,17 +109,19 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_below="@+id/productPrice"
             android:text="Product Description"
             android:textSize="18sp"
             android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+
+            android:layout_alignParentBottom="true"
+
             android:orientation="horizontal"
-            android:gravity="left"
-            android:paddingHorizontal="15dp"
-            >
+            android:paddingHorizontal="15dp">
 
             <Button
                 android:id="@+id/decrementButton"
@@ -112,10 +133,10 @@
                 android:id="@+id/quantityTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="8dp"
                 android:text="1"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:paddingHorizontal="8dp" />
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/incrementButton"
@@ -123,19 +144,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30px"
                 android:text="+" />
+
             <Button
                 android:id="@+id/btnAddToCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Add to Cart"
-                android:textSize="14sp"
-                android:layout_gravity="center" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
+    </RelativeLayout>
 
 
 
-    </LinearLayout>
+
+
+</LinearLayout>
 
 
