--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingHorizontal="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
+<!--        android:id="@+id/coordinatorLayout"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:paddingHorizontal="4dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/mainFragmentContainer"
             android:name="com.example.mobile_scratch.fragments.HomeFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintEnd_toEndOf="parent"
+
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_above="@id/mainBottomNavBar"
             tools:layout="@layout/fragment_home" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -37,7 +44,8 @@
             app:fabCradleVerticalOffset="0dp"
             app:hideOnScroll="true"
             app:layout_scrollFlags="scroll|enterAlways"
-            app:menu="@menu/bottom_nav_menu">
+            app:menu="@menu/bottom_nav_menu"
+            android:layout_alignParentBottom="true">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
@@ -52,12 +60,13 @@
             app:fabCustomSize="60dp"
             app:layout_anchor="@id/mainBottomNavBar"
             app:layout_anchorGravity="center_horizontal"
-            android:layout_marginBottom="65dp"
+            android:layout_marginBottom="60dp"
             app:srcCompat="@drawable/ic_search"
+            android:layout_alignParentBottom="true"
            />
+        </RelativeLayout>
 
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+<!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
